# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.534 2005/12/18 23:25:00 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  18 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  change ordering of statements in CC run() while loop to not go past the end
  of the array

  18 Dec 2005; Preston Cody <codeman@gentoo.org>
  REMOVED dialogfe.py since it is totally obsolete.  use gli-dialog.py
  added a diagram by blackace from last night.
  added the glossary in RTF format.
  
  17 Dec 2005; Preston Cody <codeman@gentoo.org>
  x86AT: separated out emerge/configure from running of bootloader
  added MBR drive support to lilo.
  these changes will likely not work.
  AT: added setup_and_run_bootloader step.
  
  12 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  call generated code in a function
  src/net/server/html/webgli/*:
  include top/bottom
  src/GLIArchitectureTemplate.py, src/GLIClientController.py,
  src/GLIClientCongifuration.py:
  install mode magic

  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  use GLIException when there's an import problem
  added debug code to show install_steps
  src/templates/amd64ArchitectureTemplate.py:
  add . to import path
  proper path this time: ../../templates
  src/GLIArchitectureTemplate.py:
  add _portage_best_version() function

  11 Dec 2005; Preston Cody <codeman@gentoo.org>
  added initial glossary and gimli diagram to the docs directory.
  modify gli-dialog to allow editing of the install_profile after loading XML.
  
  8 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/webgli/:
  converted globaluse, localuse, networkmounts, portagetree, and stageselection
  moved saveclientconfig stuff into clientconfig
  moved saveconfigfiles into config files
  converted etc_portage and makedotconf
  converted bootloader and kernel