@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.534 2005/12/18 23:25:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.535 2005/12/18 23:34:19 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -9,6 +9,8 @@
   src/GLIClientController.py:
   change ordering of statements in CC run() while loop to not go past the end
   of the array
+  src/GLIArchitectureTemplate.py:
+  removed redundant bind mounts
 
   18 Dec 2005; Preston Cody <codeman@gentoo.org>
   REMOVED dialogfe.py since it is totally obsolete.  use gli-dialog.py
